--- a/Hockey-TD3/requirements.txt
+++ b/Hockey-TD3/requirements.txt
@@ -6,3 +6,7 @@ gymnasium
 matplotlib
 pandas
 scikit-learn # for evaluation
+
+# for the tournament
+comprl @ git+https://github.com/martius-lab/teamproject-competition-server.git#egg=comprl&subdirectory=comprl
+hockey @ git+https://git@github.com/martius-lab/hockey-env.git
