--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "ipympl",
     "imageio",
     "hockey @ git+https://github.com/martius-lab/hockey-env.git",
+    "comprl @ git+https://github.com/martius-lab/teamproject-competition-server.git#egg=comprl&subdirectory=comprl",
 ]
 
 
